--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^9.1.2",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^6.26.0",
